# Instapy

./: README.md  pyproject.toml  timing-report.txt
instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  testing.py  timing.py
instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_numba.py  test_numpy.py  test_python.py
